--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,8 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
+pod 'RNKeychain', :path => '../node_modules/react-native-keychain'
+
 production = ENV["PRODUCTION"] == "1"
 
 target 'kompanion' do
