--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "18.0.0",
-    "react-native": "0.69.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
+    "react": "18.0.0",
+    "react-native": "0.69.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keychain": "^8.1.1",
     "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
@@ -31,10 +32,10 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
     "@types/react-native-vector-icons": "^6.4.11",
+    "@types/react-native-video": "^5.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "@types/react-native-video": "^5.0.14",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
